package io.hohichh.planning_assistant.enums;

public enum SubtaskStatus {
    DRAFT,
    PENDING_DELETE,
    SCHEDULED,
    COMPLETED
}
